Fix one-pixel gap on tabs (#712)

--- a/css/hole.css
+++ b/css/hole.css
@@ -57,7 +57,6 @@ section {
 section header {
     align-items: center;
     display: flex;
-    height: 2rem;
     justify-content: space-between;
     padding-right: .5rem;
 }
